--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
 /*  your css code here. If applicable */
+#boxModel{
+	height:80vh;
+	display:none;
+	justify-content:center;
+	align-items:center;
+}
+#box{
+	width:80%;
+	height:120px;
+	background-color:grey;
+	padding:10px;
+}
+#heading{
+	background-color:green;
+	padding:10px;
+}
+#flex{
+	display:flex;
+	justify-content:space-between;
+	
+}
