--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 	background-color:grey;
 	padding:10px;
 }
-#heading{
+#title{
 	background-color:green;
 	padding:10px;
 }
@@ -19,4 +19,7 @@
 	display:flex;
 	justify-content:space-between;
 	
+}
+#close button{
+	cursor:pointer;
 }
